# plate

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
migrations/: 001_initial.sql
scripts/: release.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: live_transcriber.rs  microphone.rs  mod.rs  recorder.rs  system_audio.rs  types.rs
src-tauri/src/commands/: audio_cmds.rs  bookmark_cmds.rs  mod.rs  notes_cmds.rs  recording_cmds.rs  search_cmds.rs  settings_cmds.rs  transcript_cmds.rs
src-tauri/src/db/: bookmarks.rs  mod.rs  notes.rs  recordings.rs  schema.rs  settings.rs  transcripts.rs
src-tauri/src/llm/: claude_api.rs  claude_session.rs  g4f.rs  mod.rs  note_generator.rs  prompts.rs  provider.rs  types.rs
src-tauri/src/transcription/: engine.rs  mod.rs  model_manager.rs  types.rs  whisper_api.rs  whisper_local.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/notes/: GenerateNotesButton.tsx  NoteViewer.tsx  NotesList.tsx  PromptPicker.tsx
src/components/recording/: AudioSourcePicker.tsx  LiveTranscript.tsx  RecordingControls.tsx  WaveformVisualizer.tsx
src/hooks/: useNotes.ts  useRecording.ts  useSettings.ts  useTranscript.ts
src/lib/: tauri.ts  types.ts
src/pages/: LibraryPage.tsx  NotesPage.tsx  RecordPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts
src/styles/: global.css
(+7 files in other folders)
