[package]
name = "plate"
version = "0.4.0"
description = "Lecture recording, transcription & note generation for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "plate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Transcription
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "blocking"] }

# macOS system audio
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSArray", "NSDictionary"] }
screencapturekit = "1.0"
